# db2q

./: Cargo.toml  README.md  build.rs
db2q-proto/db2q/proto/queue/v1/: q.proto
db2q-rdb/db2q-postgresql/: Cargo.toml
db2q-rdb/db2q-postgresql/examples/simple/: Cargo.toml  db2q-proto  run.sh  simple  test.sh
db2q-rdb/db2q-postgresql/examples/simple/src/: main.rs
db2q-rdb/db2q-postgresql/src/: lib.rs
db2q-rdb/db2q-postgresql/src/common/: minimal.rs
db2q-rdb/db2q-postgresql/src/common/minimal/: topic2table.rs
db2q-rdb/db2q-postgresql/src/count/minimal/: svc.rs
db2q-rdb/db2q-postgresql/src/queue/: minimal.rs
db2q-rdb/db2q-postgresql/src/queue/minimal/: svc.rs
db2q-rdb/db2q-postgresql/src/topic/: minimal.rs
db2q-rdb/db2q-postgresql/src/topic/minimal/: svc.rs  topic2table.rs
src/: lib.rs  queue.rs  uuid.rs
src/count/: cmd.rs
src/count/cmd/: exact.rs  fast.rs
src/queue/: cmd.rs  svc.rs
src/queue/cmd/: count.rs  keys.rs  next.rs  pop.rs  push.rs  wait_next.rs
src/queue/rw/: svc.rs
src/queue/st/: svc.rs
src/topic/: cmd.rs  svc.rs
src/topic/cmd/: create.rs  drop.rs  list.rs
