[package]
name = "db2q-postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.db2q]
path = "../.."

[dependencies.tonic]
version = "0.10"
features = [
    "codegen",
]

[dependencies.async-trait]
version = "0.1.13"

[dependencies.deadpool-postgres]
version = "0.10"
default-features = false
features = [
    "rt_tokio_1",
]

[dependencies.tokio-postgres]
version = "0.7"
optional = true
default-features = false
features = [
    "runtime",
]

[features]
default = [
    "tpostgres",
]

tpostgres = [
    "tokio-postgres",
]
