[package]
name = "db2q-postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.db2q]
path = "../.."

[dependencies.futures-util]
version = "0.3.28"
default-features = false
features = [
]

[dependencies.tonic]
version = "0.10"
default-features = false
features = [
    "transport",
]

[dependencies.tonic-types]
version = "0.10"
default-features = false

[dependencies.deadpool]
version = "0.9"
default-features = false
features = [
    "managed",
]

[dependencies.deadpool-postgres]
version = "0.10"
default-features = false
features = [
    "rt_tokio_1",
]
